apps/stock-analyzer/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: stock-analyzer
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  clusterIP: None
